# pren

./: README.md
docu/: .gitignore  README.md  Redlichkeitserklaerung.tex  docu.md  main.tex  main.toc
docu/diverses/: literatur-lib.bib
docu/drawings/ArchitekturDiagramm/: SW_Architektur.xml  SW_Architektur_Middleware.xml
docu/drawings/KomponentenDiagramm/: .gitignore  KomponentenDiagramm.xml  KomponentenDiagramm_ET.xml
docu/images/Komponentendiagramm/: Komponentendiagramm.xml
docu/images/et/: KomponentenDiagramm_ET.xml  et_anordnung_zug.pptx  et_com_pi_handler.drawio  et_cube_detection_proc.drawio  et_mc_softwarekonzept.drawio  et_schwenker_messung.drawio  (+2 more)
docu/include_pdf/: .gitignore
docu/pren1/: main.tex
docu/sections/: .gitignore  technologie_recherche_et.tex  technologie_recherche_it.tex  technologie_recherche_mt.tex
src/: __init__.py  src.md
src/TinyK22/: .gitignore
src/poc/: .gitignore
src/raspi/: __init__.py  build.sh  deploy.sh  deploy_master.sh  deploy_slave.sh  kill.sh  raspi.md  requirements.txt  run.sh  run_master.sh  run_pc.sh  run_slave.sh  setup.sh
src/raspi/numberdetector/plate-detection-cpp/: .gitignore  CMakeLists.txt
src/raspi/numberdetector/plate-detection-cpp/include/: PlateDetec.hpp  ZeroMQ.hpp
src/raspi/numberdetector/plate-detection-cpp/lib/protobuf/: build_proto.sh
src/raspi/numberdetector/plate-detection-cpp/lib/protobuf/pb/: numberReco.pb.cc  numberReco.pb.h  numberReco.proto
src/raspi/numberdetector/plate-detection-cpp/src/: PlateDetec.cpp  ZeroMQ.cpp  main.cpp
src/simulation/: MotorAntrieb.m
(+308 files in other folders)
